# StreamGenerator

./: COPYING  INSTALL  README  configure  configure.ac
include/: HTS_engine.h
lib/: HTS_engine.c  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_misc.c  HTS_model.c  HTS_pstream.c  HTS_sstream.c  Makefile.am  Makefile.in
